--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -77,11 +77,10 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+              Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo repertorio incluye cosplays profesionales, sketches de comedia y videos de música. Empezó su carrera en el sector de las páginas web en 2011, uniéndose más tarde al grupo Not Literally Productions en YouTube, donde se hizo conocida por crear parodias musicales de pop muy pegadizas sobre Harry Potter, Juego de Tronos, Doctor Who…
             </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              En 2014 decidió triunfar en solitario, y se empezó a hacer muy popular debido a sus cosplays de Arya de Juego de Tronos y de Jester de Critical Role. Sus cosplays inspirados en mujeres vintage se hicieron virales rápidamente, al igual que su traje de centauro completamente articulado de la película Fantasía de Disney. Ginny dirige ahora su propio negocio creando disfraces realmente detallados y escribiendo, produciendo y protagonizando videos musicales y sketches sobre fandoms y juegos de mesa.
             </p>
           </article>
         </div>
