--- a/informacion/invitados/kiki.html
+++ b/informacion/invitados/kiki.html
@@ -77,11 +77,7 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
-            </p>
-            <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              La cantante del hit Blue in Green y unas de las voces en auge de la escena nipona, estará en España por primera vez como invitada a Manguca. Tras el éxito de su álbum vivid, prepara un nuevo trabajo junto a SUKISHA que verá luz la semana que viene, y que se podrá escuchar en exclusiva en nuestro festival Manguca. Además, ambos ya trabajaron juntos en el ya mencionado hit Blue in Green y compartirán escenario en el evento.
             </p>
           </article>
         </div>
