--- a/informacion/invitados/laia.html
+++ b/informacion/invitados/laia.html
@@ -77,11 +77,13 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+              Laia López, graduada en Bellas Artes en la Universidad de Barcelona, es una autodidacta en el campo de la ilustración digital y en el desarrollo de su propio estilo de dibujo. Empezó a dedicarse de manera profesional al arte a los 16 años y desde entonces ha seguido su camino por la rama de la ilustración digital y tradicional, especializándose en el diseño de personajes, desarrollo visual y el cómic/novela ilustrada. Comparte la mayoría de sus ilustraciones por redes sociales, donde alcanza más de un millón de seguidores.
             </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              Hace unos pocos meses, publicó su último trabajo: “Strawberry Moon” su primera obra en solitario, una novela gráfica juvenil en dos tomos sobre sirenas. Actualmente trabaja en ilustración editorial, ilustrando libros infantiles y juveniles para diversas editoriales españolas, como Planeta, Penguin Random House, Norma Editorial, La Galera… ¿Os suenan Mystical? ¿Sara y las goleadoras? ¿La diversión de Martina? ¡Los ha ilustrado ella! También tiene un artbook con una recopilación de sus mejores obras hasta el momento llamado “Gleaming” En su tiempo libre también hace fan art de las cosas que le apasionan, sobretodo de K-pop, anime y Disney.
+            </p>
+            <p>
+              ¡No os perdáis a Laia López por primera vez en Manguca! Tendrá un stand donde podréis conocerla y comprar su merchandising y además dará una charla. ¡Os esperamos!
             </p>
           </article>
         </div>
