--- a/informacion/invitados/odashima.html
+++ b/informacion/invitados/odashima.html
@@ -77,12 +77,9 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
-            </p>
+              Hitomi Odashima es la directora de animación y asistente de diseño de personajes de My Hero Academia, una de las series de anime más populares del momento. Su trabajo es reconocido en todo el mundo por millones de personas, podremos conocerla en persona durante la próxima edición Manguca.            </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
-            </p>
+              Odashima también es conocida por su trabajo en el anime de Blue Exorcist, donde dirigió uno de los capítulos. Además, ha dejado su firma en series como Jewelpet Happiness y la OVA de Black Rock Shooter, entre otros proyectos. Uno de los más destacados es Digimon Adventure tri, en la que trabajó en el diseño de vestuario.            </p>
           </article>
         </div>
       </div>
