--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -77,11 +77,15 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+              Shirogane-sama es una cosplayer, estilista de pelucas y MUA de Moscú que lleva haciendo cosplay poco más de 7 años. En 2017 empezó a tener su propia tienda, Holish Cosplay, 
+              donde trabaja actualmente estilizando pelucas para cosplayers. Shirogane-sama empezó su negocio con su talentoso fotógrafo, Ovsyan, aunque en la actualidad dispone de un equipo más grande de creadores del cual está muy orgullosa.
             </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              La mayor parte de su creatividad se refleja en sus sesiones de fotos y en sus videos de cosplay, solo en 2019 ha tenido más de 60 y varios videos, trabajando muy duro en ellos. Igualmente su pasión por las artes visuales no la han alejado de los concursos, donde suele actuar y lucir los trajes que ella confecciona. 
+              También suele juzgar en eventos de Rusia y últimamente de todo el mundo, ya que su popularidad la ha llevado a ser invitada de diversos eventos internacionales.
+            </p>
+            <p>
+              ¡No os perdáis a Shirogane-sama por primera vez en la capital en la próxima edición de Manguca! Será jurado de los concursos, participará en el Q&A y además tendrá un stand donde podréis conocerla y comprar su merchandising. ¡Os esperamos!
             </p>
           </article>
         </div>
