--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -77,11 +77,10 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+              Se trata del productor y cantante japonés SUKISHA, siendo la primera estrella invitada de Manguca. Por primera vez fuera de Japón se podrá disfrutar de los temas y la música de este maestro del lo-fi hip hop, el género musical que más de moda está en internet.
             </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              La obra de este artista japonés destaca por sus composiciones de estilo lo-fi hip hop, un enfoque estético de la música en donde predomina el uso de medios de grabación de baja fidelidad. Conocido también como Hiroyuki Ikezawa, es un productor que lo pone de relieve no solo con este tipo de música. Tras este artista encontramos temas de corte más pop como Blue in Green, Buddha’s Palm, Pink Jewelry Dream o 4 and half minutes magic.
             </p>
           </article>
         </div>
