--- a/informacion/invitados/halex.html
+++ b/informacion/invitados/halex.html
@@ -77,11 +77,9 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
-            </p>
+              Hannah Alexander trabaja como artista a tiempo completo en Hampshire, UK. Se especializa en arte digital y diseño de vestuario, así como en retratos de acuarela. Su estilo es una combinación de la simplicidad moderna y el Art Nouveau retro. Es más conocida por sus diseños basados en personajes de la cultura pop, además sacó un libro con todo tipo de detalles para que fuese más fácil hacer cosplay de éstos.            </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              No solo se dedica a la ilustración y al diseño, Hannah Alexander es cosplayer ocasional. Ha estudiado confección y diseño por lo que su nivel de costura es muy alto, fijándose sobretodo en los detalles de los trajes. 
             </p>
           </article>
         </div>
