--- a/informacion/invitados/ladybeard.html
+++ b/informacion/invitados/ladybeard.html
@@ -66,22 +66,21 @@
           <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="ginny.html">Ginny Di</a></li>
+            <li><a href="ladybeard.html">Lady Beard</a></li>
           </ul>
         </div>
         <div class="titleBox">
           <div id="title">
-            <span>Ginny Di</span>
+            <span>Lady Beard</span>
         </div>
         </div>
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+              Este artista australiano demostró desde pequeño su particular extravagancia y sus dotes como actor. Fue en la lucha libre donde encontró sus dos grandes pasiones, la actuación y las artes marciales, fusionándolas para crear su propia identidad. Movido por este deporte, se mudó a Hong Kong, donde obtuvo gran popularidad y renombre tras sus primeras peleas, en las que vestía un llamativo atuendo de lolita.
             </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              Con una gran cantidad de admiradores y bajo el nombre de “Wu Su Lui” (LadyBeard en cantonés), siguió su sueño de iniciar una carrera como cantante de Heavy Metal. Fue en 2011 cuando comenzó a atraer la atención del público japonés como integrante del grupo Ladybaby y su fama se ha extendido por todo el mundo. Actualmente, forma parte del grupo Deadlift Lolita junto a Reika Saiki.
             </p>
           </article>
         </div>
