--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -66,12 +66,12 @@
           <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="ginny.html">Ginny Di</a></li>
+            <li><a href="overwatchvoices.html">Voces Overwatch</a></li>
           </ul>
         </div>
         <div class="titleBox">
           <div id="title">
-            <span>Ginny Di</span>
+            <span>Voces Overwatch</span>
         </div>
         </div>
         <div id="information">
