--- a/informacion/invitados/poltattoo.html
+++ b/informacion/invitados/poltattoo.html
@@ -66,22 +66,18 @@
           <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="ginny.html">Ginny Di</a></li>
+            <li><a href="poltattoo.html">Pol Tattoo</a></li>
           </ul>
         </div>
         <div class="titleBox">
           <div id="title">
-            <span>Ginny Di</span>
+            <span>Pol Tattoo</span>
         </div>
         </div>
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
-            </p>
-            <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+              Empezó con el grafiti, continuó con la pintura y ahora se lanza al tatuaje… hasta de piezas arqueológicas. Es la historia de Samuel Martínez (Jerez, 1987), conocido artísticamente por el nombre de Pol Tattoo. Cuando era un chaval y comenzó con el bachillerato artístico pasaba más tiempo “fuera de la calle pintando grafitis que en clase”. Así dejaba por todos los rincones de Jerez la palabra “Swing”. Ahora Pol Tattoo tiene estudio propio en su ciudad natal y se anima a iniciar proyectos como el que este sábado ha tenido por primera vez en el Museo Arqueológico de Jerez.
             </p>
           </article>
         </div>
