--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -77,11 +77,10 @@
         <div id="information">
           <article>
             <p>
-              FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
-              tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
+              Chloé Hollings es una actriz, artista de voz, escritora y cantante francesa, británica y australiana. Nació en París, Francia, pero pasó sus primeros años en Melbourne, Australia. Estos dos orígenes magníficos pero muy diferentes la han convertido en quien es: una artista versátil, sedienta de conocimiento, que busca la belleza en todo. Como actriz, trabajó principalmente en el teatro, pero es mejor conocida por su aparición en el programa de televisión francés «Versailles", Valerian and the City of a Thousand Planets, de Luc Besson, y por dar voz al famoso personaje de Overwatch: Widowmaker. También es autora de una memoria publicada en Francia en 2016.
             </p>
             <p>
-              Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
+             Anjali Bhimani proporciona la voz del héroe Symmetra en Overwatch.Nació y creció en California y se graduó de la Universidad Northwestern con un certificado en teatro musical. Ella ha actuado en Broadway y también tiene una exitosa carrera en pantalla. Ella es más conocida por su papel de Nina Patel en el popular programa de televisión estadounidense Modern Family.
             </p>
           </article>
         </div>
