--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -75,8 +75,8 @@
 <div class="tabContainer">
 
     <div class="buttonContainer">
-      <button onclick="showPanel(0,'#58B1A6')" id="button1">Viernes</button>
-      <button onclick="showPanel(1,'#0D8D7A')" >Sábado</button>
+      <button onclick="showPanel(0,'#D8AC34')" id="button1">Viernes</button>
+      <button onclick="showPanel(1,'#D8AC34')" >Sábado</button>
       <button onclick="showPanel(2,'#D8AC34')" id="button3" >Domingo</button>
   
   </div>
