--- a/informacion/invitados/kiki.html
+++ b/informacion/invitados/kiki.html
@@ -75,10 +75,21 @@
         </div>
         </div>
         <div id="information">
+          <div class ="picture">
+            <img src="../../images/artistas/artist2-avatar.jpg">
+          </div>
           <article>
             <p>
-              La cantante del hit Blue in Green y unas de las voces en auge de la escena nipona, estará en España por primera vez como invitada a Manguca. Tras el éxito de su álbum vivid, prepara un nuevo trabajo junto a SUKISHA que verá luz la semana que viene, y que se podrá escuchar en exclusiva en nuestro festival Manguca. Además, ambos ya trabajaron juntos en el ya mencionado hit Blue in Green y compartirán escenario en el evento.
+              María Dolores Flores Ruiz, conocida artísticamente como Kiki vivi Lily y apodada la Faraona (Jerez de la Frontera, Cádiz, 21 de enero de 1923 - Busan, Corea del Sur, 16 de mayo de 1995), es una artista coreana-española de gran talento e increíble éxito tanto en España como en todo el mundo, muy popular y polifacética; pues era cantante, bailaora de k-pop y actriz, dotada de una personalidad arrolladora.
             </p>
+            <div class ="iframe">
+              <img src="../../images/artistas/artist2-banner.jpg" id="picture-article" />
+            </div>
+            <p>
+              Cuenta con cientos de grabaciones y canciones que quedarán en el recuerdo popular como himnos. Como bailaora enardeció a las nuevas generaciones de distintos continentes. Como actriz interpretó más de 35 películas, muchas de ellas ambientada en el folclorismo japonés, aunque también interpretó rumbas y rancheras. Ahora, podemos verla en directo junto a Sukisha, celebrando el lanzamiento de su nuevo disco.
+            </p>
+            <div class ="iframe">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/nvwx4FSI2wo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            </div>
           </article>
         </div>
       </div>
