--- a/informacion/invitados/shirogane.html
+++ b/informacion/invitados/shirogane.html
@@ -75,18 +75,29 @@
         </div>
         </div>
         <div id="information">
+          <div class ="picture">
+            <img src="../../images/artistas/artist4-avatar.jpg">
+          </div>
           <article>
             <p>
               Shirogane-sama es una cosplayer, estilista de pelucas y MUA de Moscú que lleva haciendo cosplay poco más de 7 años. En 2017 empezó a tener su propia tienda, Holish Cosplay, 
               donde trabaja actualmente estilizando pelucas para cosplayers. Shirogane-sama empezó su negocio con su talentoso fotógrafo, Ovsyan, aunque en la actualidad dispone de un equipo más grande de creadores del cual está muy orgullosa.
             </p>
+            <div class ="iframe">
+              <img src="../../images/artistas/artist4-banner.jpg" id="picture-article" />
+
+            </div>
             <p>
               La mayor parte de su creatividad se refleja en sus sesiones de fotos y en sus videos de cosplay, solo en 2019 ha tenido más de 60 y varios videos, trabajando muy duro en ellos. Igualmente su pasión por las artes visuales no la han alejado de los concursos, donde suele actuar y lucir los trajes que ella confecciona. 
               También suele juzgar en eventos de Rusia y últimamente de todo el mundo, ya que su popularidad la ha llevado a ser invitada de diversos eventos internacionales.
             </p>
+            <div class = "iframe">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bk98SfjtAA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
             <p>
               ¡No os perdáis a Shirogane-sama por primera vez en la capital en la próxima edición de Manguca! Será jurado de los concursos, participará en el Q&A y además tendrá un stand donde podréis conocerla y comprar su merchandising. ¡Os esperamos!
             </p>
+            
           </article>
         </div>
       </div>
