--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -75,16 +75,30 @@
           </div>
         </div>
         <div id="information">
+          <div class ="picture">
+            <img src="../../images/artistas/artist1-avatar.jpg">
+          </div>
           <article>
             <p>
               FAKY es un grupo de cinco chicas, Lil’ Fang, Mikako, Akina, Hina y Taki, activo desde 2013, que en el último año ha renacido con la trilogía GIRL POWER, 
               tres canciones —GIRLS GOTTA LIVE, ANTIDOTE y NEW AGE— que han revolucionado la escena pop japonesa y que incluyen colaboraciones en su producción de artistas de la talla de Koda Kumi, DJ Fresh o Awich. En 2016, su tema CANDY se convirtió en el primer gran hit de FAKY consiguiendo la tercera posición en iTunes junto a Ariana Grande y Radiohead.
-            </p>
+            </p>   
+            <div class ="iframe">
+              <img src="../../images/artistas/artist1-banner.jpg" id="picture-article" />
+            </div>
             <p>
               Además, ese mismo año la canción ganó el premio “Mejor vídeo de nuevos artistas japoneses” en los MTV Video Music Awards de Japón. En 2017, la canción Surrender se coló entre el Top 50 de canciones virales de Spotify. Sin olvidarnos de las canciones four, el cuarto ending del anime Black Clover y Chase Me, de Gundam Build Fighters.
             </p>
+         
+            <div class = "iframe">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Um0Yk3ahDCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          </div>
+            <p>
+              ¡No os perdáis a Shirogane-sama por primera vez en la capital en la próxima edición de Manguca! Será jurado de los concursos, participará en el Q&A y además tendrá un stand donde podréis conocerla y comprar su merchandising. ¡Os esperamos!
+            </p>
+            
           </article>
         </div>
+
     </div>
     </main>
     <footer>
