--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -79,7 +79,36 @@
     </main>
     <footer>
       <div class="footer">
-        <p>Manguca &#169; todos los derechos reservados</p>
+        <div class="about">
+        <div class="colabout">
+        <div>
+          <a href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+          >Contactar por correo</a
+        >
+        </div>
+        <div>
+           <a href="./informacion/invitados.html">Sobre nosotros</a> 
+        </div>
+        <div>
+          <a href="./informacion/invitados.html">Voluntariado</a> 
+       </div>
+       </div>
+        <div class="colabout">
+          <div>
+            <a href="./informacion/invitados.html">Contratación de stands</a> 
+         </div>
+        </div>
+      </div>
+       <div class="contacto">
+        <div class="contactos">
+            <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
+            <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
+            <img id="iconos" src="../images/iconos/facebook.png" alt="Facebook" />
+            <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
+        </div>
+        <p id="copyright">Manguca &#169; Todos los derechos reservados</p> 
+      </div>
+        </div>
       </div>
     </footer>
   </body>
